--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
           <div class="carousel-item active" >
             <a href="#book1">
             <h2 class="testimonial-text">Dharma</h2>
-            <img class="test-image" src="images2/dharma.png" alt="dharma-book">
+            <img class="test-image" src="images2/dharma.PNG" alt="dharma-book">
             </a>
           </div>
           <div class="carousel-item" >
             <a href="#book2">
             <h2 class="testimonial-text">One Decision</h2>
-            <img class="test-image" src="images2/decision.png" alt="one-decision-book">
+            <img class="test-image" src="images2/decision.PNG" alt="one-decision-book">
             </a>
           </div>
           <div class="carousel-item" >
