--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="carousel-item active" >
             <a href="#book1">
             <h2 class="testimonial-text">Dharma</h2>
-            <img class="test-image" src="images2/dharma.PNG" alt="dharma-book">
+            <img class="test-image" src="images2/Dharma.PNG" alt="dharma-book">
             </a>
           </div>
           <div class="carousel-item" >
