--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <div class="container-fluid">
     <div class="row">
       <div class="col-lg-3">
-         <img class="images" src="images2/dharma.png" alt="dharma-book">  
+         <img class="images" src="images2/Dharma.PNG" alt="dharma-book">  
       </div>   
       <div class= "col-lg-9">     
          <p class="description">
@@ -214,7 +214,7 @@
              </p>
         </div>
         <div class="col-lg-3">
-          <img class="images" src="images2/decision.png" alt="one-decision-book"> 
+          <img class="images" src="images2/decision.PNG" alt="one-decision-book"> 
        </div> 
       </div>  
       </div>          
