--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-</script><link rel="stylesheet" href="css/styles.css">
+</script><link rel="stylesheet" href="CSS/styles.css">
 
 </head>
 
@@ -91,13 +91,13 @@
           <div class="carousel-item active" >
             <a href="#book1">
             <h2 class="testimonial-text">Dharma</h2>
-            <img class="test-image" src="images2/dharma.png" alt="dharma-book">
+            <img class="test-image" src="images2/Dharma.PNG" alt="dharma-book">
             </a>
           </div>
           <div class="carousel-item" >
             <a href="#book2">
             <h2 class="testimonial-text">One Decision</h2>
-            <img class="test-image" src="images2/decision.png" alt="one-decision-book">
+            <img class="test-image" src="images2/decision.PNG" alt="one-decision-book">
             </a>
           </div>
           <div class="carousel-item" >
@@ -171,7 +171,7 @@
     <div class="container-fluid">
     <div class="row">
       <div class="col-lg-3">
-        <a href="https://amzn.to/39Ottab" target="_blank"><img class="images" src="images2/dharma.png" alt="dharma-book">  </a>
+        <a href="https://amzn.to/39Ottab" target="_blank"><img class="images" src="images2/Dharma.PNG" alt="dharma-book">  </a>
       </div>   
       <div class= "col-lg-9">     
          <p class="description">
@@ -214,7 +214,7 @@
              </p>
         </div>
         <div class="col-lg-3">
-          <a href="https://amzn.to/3qB67M6" target="_blank"> <img class="images" src="images2/decision.png" alt="one-decision-book"></a>
+          <a href="https://amzn.to/3qB67M6" target="_blank"> <img class="images" src="images2/decision.PNG" alt="one-decision-book"></a>
        </div> 
       </div>  
       </div>          
