--- a/index.html
+++ b/index.html
@@ -520,6 +520,9 @@ You can get to learn a tot from the life struggles from the biography of famous 
     <a href="#"><i class="footer-icon fab fa-facebook-f"></i></a>
     <a href="#"><i class="footer-icon fas fa-envelope"></i></a>
  </footer>
-
+  <a title="Real Time Web Analytics" href="http://clicky.com/101297767"><img src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+  <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101297767);</script>
+<script async src="//static.getclicky.com/js"></script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101297767ns.gif" /></p></noscript>
 </body>
 </html>
