--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="google-site-verification" content="u9IDgoztTSyxFb0usKM1P8MxCGuL4W4uT1C8CV6kOns" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-882NRS6MQW"></script>
 <script>
